--- a/atsintegration/pom.xml
+++ b/atsintegration/pom.xml
@@ -37,7 +37,7 @@
     <dependency>
       <groupId>org.jboss.spec.javax.transaction</groupId>
       <artifactId>jboss-transaction-api_1.1_spec</artifactId>
-      <version>${version.transaction.api}</version>
+      <version>${version.org.jboss.spec.javax.transaction}</version>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
