--- a/dbcp2-and-tomcat/pom.xml
+++ b/dbcp2-and-tomcat/pom.xml
@@ -13,11 +13,17 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.jboss.spec.javax.transaction</groupId>
-            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-            <version>${version.org.jboss.spec.javax.transaction}</version>
-            <scope>provided</scope>
-        </dependency>
+    <groupId>jakarta.ws.rs</groupId>
+    <artifactId>jakarta.ws.rs-api</artifactId>
+    <version>3.1.0</version>
+</dependency>
+
+<dependency>
+    <groupId>jakarta.transaction</groupId>
+    <artifactId>jakarta.transaction-api</artifactId>
+    <version>2.0.1</version>
+</dependency>
+
         <dependency>
             <groupId>org.jboss.integration</groupId>
             <artifactId>narayana-tomcat</artifactId>
@@ -76,25 +82,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-          <!-- JAX-B dependencies are not part of the JDK9+, explicit addition -->
-          <id>jdk11-additional-maven-dependencies</id>
-          <activation>
-            <jdk>[9,</jdk>
-          </activation>
-          <dependencies>
-            <dependency>
-              <groupId>jakarta.xml.bind</groupId>
-              <artifactId>jaxb-api</artifactId>
-              <version>2.3.1</version>
-            </dependency>
-            <dependency>
-              <groupId>org.glassfish.jaxb</groupId>
-              <artifactId>jaxb-runtime</artifactId>
-              <version>2.3.1</version>
-            </dependency>
-          </dependencies>
         </profile>
     </profiles>
 </project>
