--- a/pom.xml
+++ b/pom.xml
@@ -168,7 +168,7 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 <!--         quarkus -->
         <quarkus-plugin.version>2.10.0.Final</quarkus-plugin.version>
-        <quarkus.platform.version>2.10.0.Final</quarkus.platform.version>
+        <quarkus.platform.version>2.12.1.Final</quarkus.platform.version>
         
         <server.jvm.args>${jvm.args.other} ${jvm.args.memory} ${jvm.args.debug} ${jvm.args.modular}</server.jvm.args>
         <spring.version>2.0.9.RELEASE</spring.version>
@@ -182,8 +182,7 @@
         <version.byteman>4.0.19</version.byteman>
         <version.clear.plugin>3.0.0</version.clear.plugin>
         <version.com.github.fungal>0.11.0.Final</version.com.github.fungal>
-        <version.com.sun.faces.jsf-api>2.2.0-m13</version.com.sun.faces.jsf-api>
-        <version.com.sun.faces.jsf-impl>2.2.0-m13</version.com.sun.faces.jsf-impl>
+        <version.jakarta.faces-api>4.0.1</version.jakarta.faces-api>
         <version.commons-dbcp2>2.2.0</version.commons-dbcp2>
         <version.commons-logging>1.1.0.jboss</version.commons-logging>
         <version.commons-pool2>2.5.0</version.commons-pool2>
@@ -192,26 +191,24 @@
         <version.ear.plugin>2.10.1</version.ear.plugin>
         <version.exec-maven-plugin>1.4.0</version.exec-maven-plugin>
         <version.glassfish.corba.omgapi>4.2.1</version.glassfish.corba.omgapi>
-        <version.glassfish.json>1.1.4</version.glassfish.json>
+        <version.glassfish.json>2.0.1</version.glassfish.json>
         <version.h2>2.1.210</version.h2>
-        <version.hibernate.javax.persistence>1.0.0.Final</version.hibernate.javax.persistence>
         <version.hibernate.validator>6.1.5.Final</version.hibernate.validator>
-        <version.hibernate>6.0.0.Alpha7</version.hibernate>
+        <version.hibernate>5.6.11.Final</version.hibernate>
         <version.jackson>2.13.0</version.jackson>
         <version.jakarta.json-api>2.0.1</version.jakarta.json-api>
         <version.jakarta.xml.bind>2.3.2</version.jakarta.xml.bind>
         <version.javaee.spec>1.1.1.Final</version.javaee.spec>
         <version.javaee>7.0</version.javaee>
 <!--         javax -->
-        <version.javax.annotation.api>1.3.2</version.javax.annotation.api>
+        <version.jakarta.annotation.api>2.1.1</version.jakarta.annotation.api>
         <version.javax.el>3.0.4</version.javax.el>
         <version.javax.enterprise>1.1</version.javax.enterprise>
         <version.javax.json.api>1.1.4</version.javax.json.api>
         <version.javax.jw.jsr181>1.0-MR1</version.javax.jw.jsr181>
-        <version.javax.servlet.javax.servlet-api>3.0.1</version.javax.servlet.javax.servlet-api>
-        <version.javax.servlet.jstl>1.2</version.javax.servlet.jstl>
-        <version.javax.validation>2.0.1.Final</version.javax.validation>
-        <version.jakarta.xml.ws>2.3.1</version.jakarta.xml.ws>
+        <version.jakarta.servlet.jstl>3.0.0</version.jakarta.servlet.jstl>
+        <version.jakarta.validation>3.0.2</version.jakarta.validation>
+        <version.jakarta.xml.ws>4.0.0</version.jakarta.xml.ws>
         
         <version.jboss-transaction-api>1.1.1.Final</version.jboss-transaction-api>
         <version.jboss.bom>1.0.7.Final</version.jboss.bom>
@@ -231,10 +228,9 @@
         <version.narayana.tomcat.integration>1.0.0.Final</version.narayana.tomcat.integration>
         <version.nimbus.jose.jwt>7.9</version.nimbus.jose.jwt>
         <version.org.codehaus.jettison>1.3.2</version.org.codehaus.jettison>
-        <version.org.glassfish.javax.json>1.1</version.org.glassfish.javax.json>
 <!--         org.jboss -->
         <version.org.jboss.arquillian>1.1.13.Final</version.org.jboss.arquillian>
-        <version.org.jboss.bom>1.0.0.Final</version.org.jboss.bom>
+        <version.org.jboss.bom>1.0.1.Final</version.org.jboss.bom>
         <version.org.jboss.ironjacamar>1.4.35.Final</version.org.jboss.ironjacamar>
         <version.org.jboss.jboss-transaction-spi>7.5.2.Final</version.org.jboss.jboss-transaction-spi>
         <version.org.jboss.logmanager-jboss-logmanager>1.4.0.Final</version.org.jboss.logmanager-jboss-logmanager>
@@ -255,13 +251,12 @@
         <version.plugin.maven.dependency>2.3</version.plugin.maven.dependency>
         <version.postgresql>9.1-901.jdbc4</version.postgresql>
         <version.resteasy.api>3.0.12.Final</version.resteasy.api>
-        <version.resteasy>5.0.4.Final</version.resteasy>
+        <version.resteasy>6.1.0.Final</version.resteasy>
         <version.shrinkwrap>1.2.6</version.shrinkwrap>
         <version.surefire.plugin>3.0.0-M7</version.surefire.plugin>
         <version.tomcat.plugin>2.2</version.tomcat.plugin>
-        <version.transaction.api>1.0.1.Final</version.transaction.api>
         <version.war.plugin>3.2.3</version.war.plugin>
-        <version.weld>3.1.9.Final</version.weld>
+        <version.weld>5.0.1.Final</version.weld>
         
         <version.wildfly.plugin>1.1.0.Alpha10</version.wildfly.plugin>
         <version.wildfly.core>18.1.2.Final</version.wildfly.core>
