--- a/rts/lra-examples/cdi-participant/pom.xml
+++ b/rts/lra-examples/cdi-participant/pom.xml
@@ -116,6 +116,19 @@
           <artifactId>lra-service-base</artifactId>
           <version>${project.version}</version>
         </dependency>
+        
+        <dependency>
+    <groupId>jakarta.inject</groupId>
+    <artifactId>jakarta.inject-api</artifactId>
+        <version>2.0.1</version>
+</dependency>
+
+    <dependency>
+      <groupId>jakarta.enterprise</groupId>
+      <artifactId>jakarta.enterprise.cdi-api</artifactId>
+                <version>4.0.1</version>
+
+    </dependency>
     </dependencies>
     <profiles>
         <profile>
