--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -38,9 +38,10 @@
     <url>http://jboss.org/jbosstm</url>
 
     <modules>
-        <module>jta</module>
-        <module>narayana-spring-boot</module>
-        <module>stock-market-with-narayana-spring-boot</module>
-        <module>camel-with-narayana-spring-boot</module>
+<!--     jakarta TODO: wait narayana jta to be migrated -->
+<!--         <module>jta</module> -->
+<!--         <module>narayana-spring-boot</module> -->
+<!--         <module>stock-market-with-narayana-spring-boot</module> -->
+<!--         <module>camel-with-narayana-spring-boot</module> -->
     </modules>
 </project>
