--- a/spring/stock-market-with-narayana-spring-boot/pom.xml
+++ b/spring/stock-market-with-narayana-spring-boot/pom.xml
@@ -101,6 +101,12 @@
             <artifactId>jakarta.xml.bind-api</artifactId>
             <version>${version.jakarta.xml.bind}</version>
         </dependency>
+        
+        <dependency>
+    <groupId>jakarta.persistence</groupId>
+    <artifactId>jakarta.persistence-api</artifactId>
+    <version>3.1.0</version>
+</dependency>
     </dependencies>
 
     <build>
