--- a/transactionaldriver/pom.xml
+++ b/transactionaldriver/pom.xml
@@ -33,6 +33,7 @@
   <name>Transactional Drivers Examples</name>
   <description>Examples of how transaction drivers could be used</description>
   <modules>
+<!--   jakarta TODO: fix transactionaldriver modules -->
     <module>transactionaldriver-and-tomcat</module>
     <module>transactionaldriver-jpa-and-tomcat</module>
     <module>transactionaldriver-standalone</module>
