--- a/transactionaldriver/transactionaldriver-and-tomcat/pom.xml
+++ b/transactionaldriver/transactionaldriver-and-tomcat/pom.xml
@@ -12,12 +12,17 @@
     <packaging>war</packaging>
 
     <dependencies>
-        <dependency>
-            <groupId>org.jboss.spec.javax.transaction</groupId>
-            <artifactId>jboss-transaction-api_1.2_spec</artifactId>
-            <version>${version.org.jboss.spec.javax.transaction}</version>
-            <scope>provided</scope>
-        </dependency>
+<dependency>
+    <groupId>jakarta.ws.rs</groupId>
+    <artifactId>jakarta.ws.rs-api</artifactId>
+    <version>3.1.0</version>
+</dependency>
+
+<dependency>
+    <groupId>jakarta.transaction</groupId>
+    <artifactId>jakarta.transaction-api</artifactId>
+    <version>2.0.1</version>
+</dependency>
         <dependency>
             <groupId>org.jboss.integration</groupId>
             <artifactId>narayana-tomcat</artifactId>
