--- a/ArjunaJTA/jee_transactional_app/pom.xml
+++ b/ArjunaJTA/jee_transactional_app/pom.xml
@@ -87,7 +87,7 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version>
+            <version>${version.jakarta.persistence-api}</version>
         </dependency>
         <!-- JSF dependencies -->
         <dependency>
