--- a/ArjunaJTA/recovery/pom.xml
+++ b/ArjunaJTA/recovery/pom.xml
@@ -54,7 +54,7 @@
             <dependency>
     <groupId>jakarta.jms</groupId>
     <artifactId>jakarta.jms-api</artifactId>
-    <version>3.1.0</version>
+    <version>${version.jakarta.jms-api}</version>
 </dependency>
   </dependencies>
 
