--- a/compensating-transactions/travel-agent/pom.xml
+++ b/compensating-transactions/travel-agent/pom.xml
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version>
+            <version>${version.jakarta.persistence-api}</version>
         </dependency>
         <dependency>
           <groupId>jakarta.enterprise</groupId>
@@ -130,7 +130,7 @@
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>2.1.1</version>
+            <version>${version.jakarta.annotation.api}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.inject</groupId>
@@ -141,7 +141,7 @@
         <dependency>
             <groupId>jakarta.transaction</groupId>
             <artifactId>jakarta.transaction-api</artifactId>
-            <version>2.0.1</version>
+            <version>${version.jakarta.transaction-api}</version>
         </dependency>
 
         <!-- Test dependencies -->
