--- a/dbcp2-and-tomcat/pom.xml
+++ b/dbcp2-and-tomcat/pom.xml
@@ -21,7 +21,7 @@
 <dependency>
     <groupId>jakarta.transaction</groupId>
     <artifactId>jakarta.transaction-api</artifactId>
-    <version>2.0.1</version>
+    <version>${version.jakarta.transaction-api}</version>
 </dependency>
 
         <dependency>
