--- a/rts/at/jta-service/jms/pom.xml
+++ b/rts/at/jta-service/jms/pom.xml
@@ -75,14 +75,13 @@
 <dependency>
     <groupId>jakarta.jms</groupId>
     <artifactId>jakarta.jms-api</artifactId>
-    <version>3.1.0</version>
+    <version>${version.jakarta.jms-api}</version>
 </dependency>
 
-<!-- https://mvnrepository.com/artifact/jakarta.ejb/jakarta.ejb-api -->
 <dependency>
     <groupId>jakarta.ejb</groupId>
     <artifactId>jakarta.ejb-api</artifactId>
-    <version>4.0.1</version>
+    <version>${version.jakarta.ejb-api}</version>
 </dependency>
 
         <dependency>
