--- a/spring/stock-market-with-narayana-spring-boot/pom.xml
+++ b/spring/stock-market-with-narayana-spring-boot/pom.xml
@@ -103,10 +103,10 @@
         </dependency>
         
         <dependency>
-    <groupId>jakarta.persistence</groupId>
-    <artifactId>jakarta.persistence-api</artifactId>
-    <version>3.1.0</version>
-</dependency>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
+            <version>${version.jakarta.persistence-api}</version>
+        </dependency>
     </dependencies>
 
     <build>
