--- a/wildfly/commit-markable-resource/pom.xml
+++ b/wildfly/commit-markable-resource/pom.xml
@@ -80,10 +80,10 @@
 
     <dependencies>
         <dependency>
-    <groupId>jakarta.jms</groupId>
-    <artifactId>jakarta.jms-api</artifactId>
-    <version>3.1.0</version>
-</dependency>
+    		<groupId>jakarta.jms</groupId>
+    		<artifactId>jakarta.jms-api</artifactId>
+    		<version>${version.jakarta.jms-api}</version>
+		</dependency>
         <dependency>
             <groupId>org.wildfly.core</groupId>
             <artifactId>wildfly-logging</artifactId>
@@ -93,12 +93,12 @@
         <dependency>
             <groupId>jakarta.persistence</groupId>
             <artifactId>jakarta.persistence-api</artifactId>
-            <version>3.1.0</version>
+            <version>${version.jakarta.persistence-api}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.transaction</groupId>
             <artifactId>jakarta.transaction-api</artifactId>
-            <version>2.0.1</version>
+            <version>${version.jakarta.transaction-api}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.enterprise</groupId>
