--- a/rts/lra/flight-service/pom.xml
+++ b/rts/lra/flight-service/pom.xml
@@ -85,7 +85,7 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
-            <version>${version.resteasy-client}</version>
+            <version>${version.resteasy}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
