--- a/jta-1_2-in-wildfly/pom.xml
+++ b/jta-1_2-in-wildfly/pom.xml
@@ -59,12 +59,12 @@
         <dependency>
             <groupId>jakarta.inject</groupId>
             <artifactId>jakarta.inject-api</artifactId>
-            <version>2.0.1</version>
+            <version>${version.jakarta.inject-api}</version>
         </dependency>
         <dependency>
-          <groupId>jakarta.enterprise</groupId>
-          <artifactId>jakarta.enterprise.cdi-api</artifactId>
-          <version>4.0.1</version>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <version>${version.jakarta.enterprise.cdi-api}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.jms</groupId>
