--- a/rts/lra/pom.xml
+++ b/rts/lra/pom.xml
@@ -54,19 +54,9 @@
     <dependencyManagement>
         <dependencies>
             <dependency>
-                <groupId>javax.enterprise</groupId>
-                <artifactId>cdi-api</artifactId>
-                <version>1.2</version>
-            </dependency>
-            <dependency>
-                <groupId>jakarta.inject</groupId>
-                <artifactId>jakarta.inject</artifactId>
-                <version>1</version>
-            </dependency>
-            <dependency>
                 <groupId>jakarta.ws.rs</groupId>
                 <artifactId>jakarta.ws.rs-api</artifactId>
-                <version>2.0.1</version>
+                <version>${version.jakarta.ws.rs-api}</version>
                 <scope>provided</scope>
             </dependency>
         </dependencies>
