--- a/rts/lra/trip-client/pom.xml
+++ b/rts/lra/trip-client/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-client</artifactId>
-            <version>${version.resteasy-client}</version>
+            <version>${version.resteasy}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
